--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
                     <li><a href="#">Company <i class="fa-solid fa-angle-down"></i></a></li>
                     <li><a href="#">English <i class="fa-solid fa-angle-down"></i></a></li>
                 </ul>
-                <a href="start-demo/startdemo.html" class="get-started-button">Get Started <i class="fa-solid fa-angle-right"></i></a>
+                <a href="startdemo.html" class="get-started-button">Get Started <i class="fa-solid fa-angle-right"></i></a>
             </div>
         </nav>
         <div class="text-btn-slc">
             <a href="https://metadeegroup.com/" class="pbm" target="_blank">Powerd By Metadee <i class="fa-brands fa-meta"></i> </a>
             <h1>Your Personal Ultimate Tutor<br><span>Mygrades Ai</span></h1>
             <p>Generative Artificial Intelligence!</p>
-            <a href="start-demo/startdemo.html" class="start-demo">Start Demo</a>
+            <a href="startdemo.html" class="start-demo">Start Demo</a>
         </div>
     </main>
 
