--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             <h4>Company</h4>
             <ul class="footer-company">
                 <li><a href="#">About Us</a></li>
-                <li><a href="#">Contact Us</a></li>
+                <li><a href="contactus.html">Contact Us</a></li>
                 <li><a href="#">FAQs</a></li>
                 <li><a href="#">Terms and Conditions</a></li>
                 <li><a href="#">Private Policy</a></li>
@@ -138,7 +138,7 @@
         <div class="footer-four">
             <h4>Contact Us</h4>
             <p>If you have any questions, feedback, or inquiries, please feel free to get in touch with us. We value your opinion and are here to assist you.</p>
-            <a href="#">Contact Us</a>
+            <a href="contactus.html">Contact Us</a>
         </div>
         <!-- <div class="footer-email-address">
             <h4>© 2024 Metadee AI Pvt. Ltd., All Rights Reserved.</h4>
