--- a/startdemo.html
+++ b/startdemo.html
@@ -28,13 +28,13 @@
             <h1>Get Started</h1>
             <div class="main-text-btn">
                 <div class="school-btn">
-                <a href="#" class="school"><i class="fa-solid fa-school" class="left"></i> School <i class="fa-solid fa-arrow-right"></i></a>
+                <a href="sign.html" class="school"><i class="fa-solid fa-school" class="left"></i> School <i class="fa-solid fa-arrow-right"></i></a>
             </div>
             <div class="exam-btn">
-                <a href="#" class="entrance-exam"><i class="fa-solid fa-book"></i> Entrance Exam <i class="fa-solid fa-arrow-right"></i></a>
+                <a href="sign.html" class="entrance-exam"><i class="fa-solid fa-book"></i> Entrance Exam <i class="fa-solid fa-arrow-right"></i></a>
             </div>
             <div class="clg-btn">
-                <a href="#" class="university"><i class="fa-solid fa-building-columns"></i> University <i class="fa-solid fa-arrow-right"></i></a>
+                <a href="sign.html" class="university"><i class="fa-solid fa-building-columns"></i> University <i class="fa-solid fa-arrow-right"></i></a>
             </div>
             </div>
         </div>
